--- a/vignettes/ChineseVersion_GetStarted.Rmd
+++ b/vignettes/ChineseVersion_GetStarted.Rmd
@@ -24,12 +24,12 @@ DxDataFile <- data.frame(ID = c("A", "A", "B", "B"),
 cat(utils::packageDescription("emr")$Description)
 ```
 ### 分別產生 ICD-9-CM and ICD-10-CM 的兩種格式的表格: Decimal 和 Short 
-供後續 ICD 格式轉換的功能使用 (`convertIcdDecimaltoShort 和 convertIcdShortToDecimal`) 
+供後續 ICD 格式轉換的功能使用 (`convertIcdDxDecimaltoShort 和 convertIcdDxShortToDecimal`) 
 
 ICD-9
 ```
 icd9 <- ccsDxICD9$ICD
-ICD_9_CM_withTwoFormat <- ICD_9_CM_GenerateDecimalFormat(icd9)
+ICD_9_CM_withTwoFormat <- ICD9DxGenerateDecimalFormat(icd9)
 
 icd9_Short <- ICD_9_CM_withTwoFormat$Short[1:10]
 # c("E9500", "E9501", "E9502", "E9503", "E9504", "E9505", "E9506", "E9507", "E9508", "E9509")
@@ -39,7 +39,7 @@ icd9_Decimal <- ICD_9_CM_withTwoFormat$Decimal[1:10]
 ICD-10
 ```
 icd10 <- ccsDxICD10$ICD
-ICD_10_CM_withTwoFormat <- ICD_10_CM_GenerateDecimalFormat(icd10)
+ICD_10_CM_withTwoFormat <- ICD10DxGenerateDecimalFormat(icd10)
 
 icd10_Short <- ICD_10_CM_withTwoFormat$Short[1:10]
 # c("A150", "A154", "A155", "A156", "A157", "A158", "A159", "A170", "A171", "A1781")
@@ -52,21 +52,21 @@ icd10_Decimal <- ICD_10_CM_withTwoFormat$Decimal[1:10]
 將 ICD-CM code 的格式統一由 Short 轉成 Decimal
 ```
 # ICD-9
-convertIcdShortToDecimal(icd9_Short)$Decimal
+convertIcdDxShortToDecimal(icd9_Short)$Decimal
 # c("E950.0", "E950.1", "E950.2", "E950.3", "E950.4", "E950.5", "E950.6", "E950.7", "E950.8", "E950.9")
 
 # ICD-10
-convertIcdShortToDecimal(icd10_Short)$Decimal
+convertIcdDxShortToDecimal(icd10_Short)$Decimal
 # c("A15.0", "A15.4", "A15.5", "A15.6", "A15.7", "A15.8", "A15.9", "A17.0", "A17.1", "A17.81")
 ```
 將 ICD-CM code 的格式統一由 Decimal 轉成 Short
 ```
 # ICD-9
-convertIcdDecimaltoShort(icd9_Decimal)$Short
+convertIcdDxDecimaltoShort(icd9_Decimal)$Short
 # c("E9500", "E9501", "E9502", "E9503", "E9504", "E9505", "E9506", "E9507", "E9508", "E9509")
 
 # ICD-10
-convertIcdDecimaltoShort(icd10_Decimal)$Short
+convertIcdDxDecimaltoShort(icd10_Decimal)$Short
 # c("A150", "A154", "A155", "A156", "A157", "A158", "A159", "A170", "A171", "A1781")
 ```
 
@@ -79,16 +79,16 @@ convertIcdDecimaltoShort(icd10_Decimal)$Short
 目前 ICD-9-CM 的 CCS 版本為 2015 , ICD-10-CM 的 CCS 版本為 2018
 
 ####單一階層分類 (CCS Category)
-`groupIcdToCCS` 可取得 ICD-9-CM 及 ICD-10-CM 相對應的 CCS 分類及分類之敘述
+`groupIcdDxToCCS` 可取得 ICD-9-CM 及 ICD-10-CM 相對應的 CCS 分類及分類之敘述
 
 ICD-9-CM 和 ICD-10-CM 的ccs單一階層一致: 共260種
 ```
 ## ICD to CCS category
-groupIcdToCCS (DxDataFile, ID, ICD, Date, "2016-01-01", FALSE)
+groupIcdDxToCCS (DxDataFile, ID, ICD, Date, "2016-01-01", FALSE)
 # "99"  NA    "96"  "139"
 
 ## ICD to CCS description
-groupIcdToCCS (DxDataFile, ID, ICD, Date, "2016-01-01", TRUE)
+groupIcdDxToCCS (DxDataFile, ID, ICD, Date, "2016-01-01", TRUE)
 # "Hypertension with complications and secondary hypertension" NA  
 # "Heart valve disorders"                                      "Gastroduodenal ulcer (except hemorrhage)" 
 ```
@@ -101,18 +101,18 @@ groupIcdToCCS (DxDataFile, ID, ICD, Date, "2016-01-01", TRUE)
 以範例為例, `42577` 為錯誤的 ICD-9-CM 之格式才會出現 `NA` (wrong format)
 
 #### 多階層分類 (Multiple ccs level)
-`groupIcdToCCSLvl` 可取得 ICD-9-CM 及 ICD-10-CM 相對應的 CCS 多階層分類及分類之敘述
+`groupIcdDxToCCSLvl` 可取得 ICD-9-CM 及 ICD-10-CM 相對應的 CCS 多階層分類及分類之敘述
 
 ICD-9-CM 共 4個階層 (Level 1~4)
 
 ICD-10-CM 共 2個階層 (Level 1~2)
 ```
 ## ICD to CCS multiple level 1
-groupIcdToCCSLvl(DxDataFile, ID, ICD, Date, "2016-01-01", 1, FALSE)
+groupIcdDxToCCSLvl(DxDataFile, ID, ICD, Date, "2016-01-01", 1, FALSE)
 # "7" NA  "7" "9"
 
 ## ICD to CCS multiple level 3
-groupIcdToCCSLvl(DxDataFile, ID, ICD, Date, "2016-01-01", 3, FALSE)
+groupIcdDxToCCSLvl(DxDataFile, ID, ICD, Date, "2016-01-01", 3, FALSE)
 # "7.1.2" NA      NA      NA    
 ```
 
@@ -129,7 +129,7 @@ groupIcdToCCSLvl(DxDataFile, ID, ICD, Date, "2016-01-01", 3, FALSE)
 最新版本為 version 2 (phecode_icd9_2), 目前只有 ICD-9-CM 供轉換分類
 ```
 ## ICD to Phecode
-groupIcdToPhecode(DxDataFile, ID, ICD, Date, "2016-01-01", FALSE)
+groupIcdDxToPhecode(DxDataFile, ID, ICD, Date, "2016-01-01", FALSE)
 # "401.21" NA       NA       NA   
 ```
 當 Phecode 分類結果為 `NA` , 會出現 `warning Message` , 可能是 ICD code 並未符合格式或其他原因; 輸入ICD-10-CM code也會出現 `NA`
@@ -144,7 +144,7 @@ icdFile <- data.frame(ICD = c("I95.0", "I952", "I110", "01091"), stringsAsFactor
 ```
 目前提供兩種方法:
 
- 1) `groupIcdToCustomGrep`: 使用`窮舉法`的方式找出符合的ICD
+ 1) `groupIcdDxToCustomGrep`: 使用`窮舉法`的方式找出符合的ICD
 ```{r}
 # groupingTable 
 data.frame(Group = c("Hypotension","Hypotension","Hypotension", "Hypertension", "Hypertension"),
@@ -152,10 +152,10 @@ data.frame(Group = c("Hypotension","Hypotension","Hypotension", "Hypertension", 
            stringsAsFactors = FALSE)
 ```
 ```
-groupIcdToCustomGrep(icdFile, groupingTable)
+groupIcdDxToCustomGrep(icdFile, groupingTable)
 #  "Hypotension"  "Hypotension"  "Hypertension" NA 
 ```
- 2) `groupIcdToCustomGrepList`: 選擇`ICD開頭`有符合做為篩選的條件
+ 2) `groupIcdDxToCustomGrepList`: 選擇`ICD開頭`有符合做為篩選的條件
 ```{r}
 # grepTable
 data.frame(Group = c("Hypotension", "Hypertension"),
@@ -163,7 +163,7 @@ data.frame(Group = c("Hypotension", "Hypertension"),
            stringsAsFactors = FALSE)
 ```
 ```
-groupIcdToCustomGrepList(icdFile, grepTable)
+groupIcdDxToCustomGrepList(icdFile, grepTable)
 # "Hypotension"  "Hypotension"  "Hypertension" NA  
 ```
 ### 共病症 (Comorbidities)
@@ -186,10 +186,10 @@ icd9_ahrq$Comorbidity %>% unique ()
 # convert icd10_map_ahrq (list) to icd10_ahrq (Df)
 icd10_ahrq$Comorbidity %>% unique
 ```
-欲將 ICD 依照 AHRQ 共病症分類, 在 function `groupIcdToComorbid` 的 `comorbidMethod` 輸入 `AHRQ`
+欲將 ICD 依照 AHRQ 共病症分類, 在 function `groupIcdDxToComorbid` 的 `comorbidMethod` 輸入 `AHRQ`
 
 ```
-groupIcdToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", ahrq, N, TRUE)
+groupIcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", ahrq, N, TRUE)
 ```
 #### Charlson 共病症分類
 目前使用 Charlson 共病症測量指標的 data frame 是基於`icd package` (`icd9_map_charlson 及 icd10_map_charlson`), 使 ICD code 依其相關的共病症做分類
@@ -206,10 +206,10 @@ icd9_charlson$Comorbidity %>% unique
 # convert icd10_map_charlson (list) to icd10_charlson (Df)
 icd10_charlson$Comorbidity %>% unique
 ```
-欲將 ICD 依照 Charlson 共病症分類, 在 function `groupIcdToComorbid` 的`comorbidMethod` 輸入 `Charlson`
+欲將 ICD 依照 Charlson 共病症分類, 在 function `groupIcdDxToComorbid` 的`comorbidMethod` 輸入 `Charlson`
 
 ```
-groupIcdToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", charlson, B, TRUE)
+groupIcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", charlson, B, TRUE)
 ```
 #### Elixhauser 共病症分類
 目前使用 Charlson 共病症測量指標的 data frame 是基於`icd package` (`icd9_map_elix 及 icd10_map_elix`), 使 ICD code 依其相關的共病症做分類
@@ -226,9 +226,9 @@ icd9_elix$Comorbidity %>% unique
 # convert icd10_map_elix (list) to icd10_charlson (Df)
 icd10_elix$Comorbidity %>% unique
 ```
-欲將 ICD 依照 Charlson 共病症分類, 在 function `groupIcdToComorbid` 的`comorbidMethod` 輸入 `elix`
+欲將 ICD 依照 Charlson 共病症分類, 在 function `groupIcdDxToComorbid` 的`comorbidMethod` 輸入 `elix`
 ```
-groupIcdToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", elix, N, TRUE)
+groupIcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", elix, N, TRUE)
 ```
 ##選擇符合條件的個案數 (Select Cases)
 
@@ -245,11 +245,11 @@ groupIcdToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", elix, N, TRUE)
 回傳的資料為符合條件的個案
 
 ```
-selectCases_Example <- data.frame(ID = c("A", "A", "A", "A"),
+selectCasesDx_Example <- data.frame(ID = c("A", "A", "A", "A"),
                          ICD = c("I072","I071", "I072", "I071"),
                          Date = as.Date(c("2016-03-31", "2016-01-29", "2016-02-10", "2018-03-10")),
                          stringsAsFactors = FALSE)
-selectCases("^I0", selectCases_Example, ID, ICD, Date, "2016-01-01", 2)
+selectCasesDx("^I0", selectCasesDx_Example, ID, ICD, Date, "2016-01-01", 2)
 ```
 ## 疾病世代 (condition Era)
 針對分散的醫療紀錄整合機制, Dr.Ryan 提出疾病世代 (Condition Era) 的概念, 來整合處理連續性的醫療行為, 疾病世代的概念是針對疾病定義持續期 (GapDate) 長度, 若診斷與診斷間間隔小於GapDate, 則兩個診斷視為同一個疾病世代
