--- a/vignettes/ChineseVersion_Diagnosis.Rmd
+++ b/vignettes/ChineseVersion_Diagnosis.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+devtools::install_github("DHLab-CGU/emr")
 library(emr)
 
 DxDataFile <- data.frame(ID = c("A", "A", "B", "B"),
@@ -21,11 +22,13 @@ DxDataFile <- data.frame(ID = c("A", "A", "B", "B"),
                          Date = as.Date(c("2013-03-31", "2013-01-29", "2016-03-10", "2016-03-10")),
                          stringsAsFactors = FALSE)
 ```
-# 簡介-診斷前處理與整合方法
+# 診斷前處理與整合方法
 ```
 cat(utils::packageDescription("emr")$Description)
 ```
-### 分別產生 ICD-9-CM and ICD-10-CM 的兩種格式的表格: Decimal 和 Short 
+### ICD-CM-CODE 格式對照
+分別產生 ICD-9-CM and ICD-10-CM 的兩種格式的表格: Decimal 和 Short
+
 供後續 ICD 格式轉換的功能使用 (`IcdDxDecimaltoShort 和 IcdDxShortToDecimal`) 
 
 ICD-9-CM
@@ -48,10 +51,12 @@ icd10_Short <- ICD10DxwithTwoFormat$Short[1:10]
 icd10_Decimal <- ICD10DxwithTwoFormat$Decimal[1:10]
 # c("A15.0", "A15.4", "A15.5", "A15.6", "A15.7", "A15.8", "A15.9", "A17.0", "A17.1", "A17.81")
 ```
-### ICD-9-CM and ICD-10-CM code 兩種格式的轉換: Short <-> Decimal
+### ICD-CM code 格式轉換
+ICD-9-CM and ICD-10-CM code 兩種格式的轉換: Short <-> Decimal
+
 進行後續分組功能之前, 根據使用者使用的 ICD 格式進行格式的統一化, 分別兩種功能可以將 ICD 統一轉換為 Short 或 Decimal 的格式
 
-將 ICD-CM code 的格式統一由 Short 轉成 Decimal
+將 ICD-CM code 的格式統一轉成 Decimal
 ```
 # ICD-9
 IcdDxShortToDecimal(icd9_Short)$Decimal
@@ -61,7 +66,7 @@ IcdDxShortToDecimal(icd9_Short)$Decimal
 IcdDxShortToDecimal(icd10_Short)$Decimal
 # c("A15.0", "A15.4", "A15.5", "A15.6", "A15.7", "A15.8", "A15.9", "A17.0", "A17.1", "A17.81")
 ```
-將 ICD-CM code 的格式統一由 Decimal 轉成 Short
+將 ICD-CM code 的格式統一轉成 Short
 ```
 # ICD-9
 IcdDxDecimaltoShort(icd9_Decimal)$Short
@@ -72,11 +77,13 @@ IcdDxDecimaltoShort(icd10_Decimal)$Short
 # c("A150", "A154", "A155", "A156", "A157", "A158", "A159", "A170", "A171", "A1781")
 ```
 
-## 將 ICD-9 及 ICD-10 code 依照不同的分類標準分類...
-將分散的 ICD-9-CM 及 ICD-10-CM 的診斷碼依照其臨床上意義相似的歸併整合為較大的群組, 標準化的分類以便於後續的整合統計分析使用
+## ICD-CM-code 整合分類
+ICD-CM-code 依照不同的分類標準分類: 將分散的 ICD-9-CM 及 ICD-10-CM 的診斷碼依照其臨床上意義相似的歸併整合為較大的群組, 標準化的分類以便於後續的整合統計分析使用
 
-### 臨床分類軟體 (Clinical Classifications Software, CCS)
-係以美國醫療照護政策研究品質局（AHRQ）為提供健康政策研究而所發展之「臨床分類軟體」。 CCS 分為單一階層及多階層的分群, 其階層是診斷分類可依使用需求調整分類標準
+目前分類標準: CCS, phecode, Comorbidity,以及自定義診斷碼分組, 以下將分別介紹之
+
+###一、臨床分類軟體
+係以美國醫療照護政策研究品質局（AHRQ）為提供健康政策研究而所發展之「臨床分類軟體」(Clinical Classifications Software, CCS)。 CCS 分為單一階層及多階層的分群, 其階層是診斷分類可依使用需求調整分類標準
 
 單一階層: 較通用的分類
 
@@ -84,8 +91,8 @@ IcdDxDecimaltoShort(icd10_Decimal)$Short
 
 目前 ICD-9-CM 的 CCS 版本為 2015 , ICD-10-CM 的 CCS 版本為 2018
 
-####單一階層分類 (CCS Category)
-`IcdDxToCCS` 可取得 ICD-9-CM 及 ICD-10-CM 相對應的 CCS 分類及分類之敘述
+####1) 單一階層分類
+`IcdDxToCCS` 可取得 ICD-9-CM 及 ICD-10-CM 相對應的 CCS 分類(CCS Category)及分類之敘述
 
 ICD-9-CM 和 ICD-10-CM 的ccs單一階層一致: 共260種
 ```
@@ -106,8 +113,8 @@ IcdDxToCCS (DxDataFile, ID, ICD, Date, "2016-01-01", TRUE)
  
 以範例為例, `42577` 為錯誤的 ICD-9-CM 之格式才會出現 `NA` (wrong format)
 
-#### 多階層分類 (Multiple ccs level)
-`IcdDxToCCSLvl` 可取得 ICD-9-CM 及 ICD-10-CM 相對應的 CCS 多階層分類及分類之敘述
+####2) 多階層分類
+`IcdDxToCCSLvl` 可取得 ICD-9-CM 及 ICD-10-CM 相對應的 CCS 多階層分類(Multiple ccs level)及分類之敘述
 
 ICD-9-CM 共 4個階層 (Level 1~4)
 
@@ -130,7 +137,7 @@ IcdDxToCCSLvl(DxDataFile, ID, ICD, Date, "2016-01-01", 3, FALSE)
 
 2) 篩選level 3: `42577` 為錯誤的ICD-9-CM之格式才會出現 `NA` , ICD-10-CM 的分類為 `NA` (ICD-10-CM 的多階層為 1~2)
 
-### Phecode
+###二、Phecode
 由 Vanderbilt University Medical Center 開發的 PheWAS 工具中, 用來將 ICD-CM code 做整併分類,其分類稱為 phecode
 
 phecode分組沒有階層性, 其特色在於各分組有其對應的控制組定義, 因此控制組的選擇會排除所有跟病例組相關疾病, 完整的控制組定義使得利用醫療大數據執行病例對照研究 (case-control study)更為全面
@@ -143,9 +150,9 @@ IcdDxToPhecode(DxDataFile, ID, ICD, Date, "2016-01-01", FALSE)
 ```
 當 Phecode 分類結果為 `NA` , 會出現 `warning Message` , 可能是 ICD code 並未符合格式或其他原因; 輸入ICD-10-CM code也會出現 `NA`
 
-### 自定義診斷碼分組 (IcdDxToCustomGrep)
+###三、自定義診斷碼分組
 
-因應臨床研究需求, 使用者可自行定義診斷分組類別及類別項目
+因應臨床研究需求, 使用者可自行定義診斷分組類別及類別項目: IcdDxToCustomGrep
 
 範例如下, 欲找出符合高血壓及低血壓分類的 ICD code , 給予其對應的表格, 則會回傳有符合的分組, 未符合則回傳 `NA`
 ```
@@ -175,12 +182,12 @@ data.frame(Group = c("Hypotension", "Hypertension"),
 IcdDxToCustomGrepList(icdFile, grepTable)
 # "Hypotension"  "Hypotension"  "Hypertension" NA  
 ```
-### 共病症 (Comorbidities)
-共病症為病患於主診斷之外, 其他已存在, 且會對主診斷疾病產生影響的疾病症狀
+###四、共病症
+共病症(Comorbidities)為病患於主診斷之外, 其他已存在, 且會對主診斷疾病產生影響的疾病症狀
 
 共病症分群基於ICD診斷碼進行標準化分組, 根據不同測量方法對共病症的定義分別介紹之: AHRQ, Charlson及Elixhauser
 
-#### AHRQ 共病症分類
+#### 1) AHRQ
 目前使用 AHRQ 共病症測量指標的data frame是基於`icd package` (`icd9_map_ahrq 及 icd10_map_ahrq`), 使ICD code 依其相關的共病症做分類
 
 ICD-9-CM及 ICD-10-CM的AHRQ 共病症種類一致, 共30種
@@ -200,7 +207,7 @@ icd10_ahrq$Comorbidity %>% unique
 ```
 IcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", ahrq, N, TRUE)
 ```
-#### Charlson 共病症分類
+#### 2) Charlson
 目前使用 Charlson 共病症測量指標的 data frame 是基於`icd package` (`icd9_map_charlson 及 icd10_map_charlson`), 使 ICD code 依其相關的共病症做分類
 
 ICD-9-CM 及 ICD-10-CM 的 Charlson 共病症種類一致, 共17種
@@ -220,26 +227,26 @@ icd10_charlson$Comorbidity %>% unique
 ```
 IcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", charlson, B, TRUE)
 ```
-#### Elixhauser 共病症分類
+#### 3) Elixhauser
 Elixhauser database共病症測量指標為HCUP (Healthcare Cost and Utilization Project)發展的共病症資料庫之一, 使 ICD code 依其相關的共病症做分類
 
 ICD-9-CM 及 ICD-10-CM 的 Elixhauser 共病症種類一致, 共 29 種
 
  ICD-9-Elixhauser: 版本為3.7 (ICD-9-CM codes October 1, 2011)
 ```
-icd9_elix_2015$Comorbidity %>% unique
+icd9_elix$Comorbidity %>% unique
 ```
  ICD-10-Elixhauser: 版本為2019.1  (FY2019 ICD-10-CM codes) 
 ```
-icd10_elix_2019$Comorbidity %>% unique
+icd10_elix$Comorbidity %>% unique
 ```
 欲將 ICD 依照 Charlson 共病症分類, 在 function `IcdDxToComorbid` 的`comorbidMethod` 輸入 `elix`
 ```
 IcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", elix, N, TRUE)
 ```
-##選擇符合條件的個案數 (Select Cases)
+##篩選符合條件的個案數
 
-用以篩選符合特定條件之個案
+用以篩選符合特定條件之個案: Select Cases
 
 篩選條件如範例:
 
@@ -258,7 +265,7 @@ selectCasesDx_Example <- data.frame(ID = c("A", "A", "A", "A"),
                          stringsAsFactors = FALSE)
 selectCasesDx("^I0", selectCasesDx_Example, ID, ICD, Date, "2016-01-01", 2)
 ```
-## 疾病世代 (condition Era)
+## 疾病世代
 針對分散的醫療紀錄整合機制, Dr.Ryan 提出疾病世代 (Condition Era) 的概念, 用以整合處理連續性的醫療行為, 將分散的醫療紀錄整合為單一病程發展紀錄
 
 疾病世代的概念是針對疾病定義持續期 (GapDate) 長度, 若診斷與診斷間間隔小於GapDate, 則兩個診斷視為同一個疾病世代
@@ -268,7 +275,7 @@ selectCasesDx("^I0", selectCasesDx_Example, ID, ICD, Date, "2016-01-01", 2)
 getConditionEra(DxDataFile, ID, ICD, Date, "2016-01-01", 30, ccs, FALSE)
 getConditionEra(DxDataFile, ID, ICD, Date, "2016-01-01", 30, ICD, FALSE)
 ```
-# Reference
+## Reference
 
 ### ICD 格式: Short 和 Decimal
 
