--- a/vignettes/ChineseVersion_Procedure.Rmd
+++ b/vignettes/ChineseVersion_Procedure.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+devtools::install_github("DHLab-CGU/emr")
 library(emr)
 
 PrDataFile <- data.frame(ID=c("A","A","A","B"),
@@ -20,11 +21,13 @@ PrDataFile <- data.frame(ID=c("A","A","A","B"),
                          Date=as.Date(c("2013-03-31","2013-01-29","2016-03-10","2016-03-10")),
                          stringsAsFactors = FALSE)
 ```
-# 簡介-檢查與處置錢處理與整合方法
+# 檢查與處置錢處理與整合方法
 ```
 cat(utils::packageDescription("emr")$Description)
 ```
-### 產生 ICD-9-PCS 的兩種格式的表格: Decimal 和 Short 
+### ICD-PCS-CODE 格式對照
+產生 ICD-9-PCS 的兩種格式的表格: Decimal 和 Short 
+
 供後續 ICD 格式轉換的功能使用 (`IcdPrDecimaltoShort 和 IcdPrShortToDecimal`) 
 
 ICD-9-PCS
@@ -43,10 +46,12 @@ icd10 <- ccsPrICD10$ICD[1:10]
 # c("00800ZZ", "00803ZZ", "00804ZZ", "00870ZZ", "00873ZZ", "00874ZZ", "00880ZZ", "00883ZZ", "00884ZZ", "008F0ZZ")
 ```
 
-### ICD-9-PCS 兩種格式的轉換: Short <-> Decimal
+### ICD-PCS code 格式轉換
+ICD-9-PCS 兩種格式的轉換: Short <-> Decimal
+
 進行後續分組功能之前, 根據使用者使用的 ICD 格式進行格式的統一化, 分別兩種功能可以將 ICD 統一轉換為 Short 或 Decimal 的格式
 
-將 ICD-PCS code 的格式統一由 Short 轉成 Decimal
+將 ICD-PCS code 的格式統一轉成 Decimal
 ```
 # ICD-9
 IcdPrShortToDecimal(icd9_Short)$Decimal
@@ -56,7 +61,7 @@ IcdPrShortToDecimal(icd9_Short)$Decimal
 IcdPrShortToDecimal(icd10)$Decimal
 # c("00800ZZ", "00803ZZ", "00804ZZ", "00870ZZ", "00873ZZ", "00874ZZ", "00880ZZ", "00883ZZ", "00884ZZ", "008F0ZZ")
 ```
-將 ICD-PCS code 的格式統一由 Decimal 轉成 Short
+將 ICD-PCS code 的格式統一轉成 Short
 ```
 # ICD-9
 IcdPrDecimaltoShort(icd9_Decimal)$Short
@@ -66,20 +71,22 @@ IcdPrDecimaltoShort(icd9_Decimal)$Short
 IcdPrShortToDecimal(icd10)$Decimal
 # c("00800ZZ", "00803ZZ", "00804ZZ", "00870ZZ", "00873ZZ", "00874ZZ", "00880ZZ", "00883ZZ", "00884ZZ", "008F0ZZ")
 ```
-## 將 ICD-9 及 ICD-10 code 依照不同的分類標準分類...
-將分散的 ICD-9-PCS 及 ICD-10-PCS 的診斷碼依照其臨床上意義相似的歸併整合為較大的群組, 標準化的分類以便於後續的整合統計分析使用
+## ICD-PCS-code 整合分類
+將 ICD-9 及 ICD-10 code 依照不同的分類標準分類: 分散的 ICD-9-PCS 及 ICD-10-PCS 的診斷碼依照其臨床上意義相似的歸併整合為較大的群組, 標準化的分類以便於後續的整合統計分析使用
 
-### 臨床分類軟體 (Clinical Classifications Software, CCS)
-係以美國醫療照護政策研究品質局（AHRQ）為提供健康政策研究而所發展之「臨床分類軟體」。 CCS 分為單一階層及多階層的分群, 其階層是診斷分類可依使用需求調整分類標準
+目前分類標準: CCS及 Procedure Class, 以下將分別介紹之 
+
+###一、臨床分類軟體 
+係以美國醫療照護政策研究品質局（AHRQ）為提供健康政策研究而所發展之「臨床分類軟體」(Clinical Classifications Software, CCS)。 CCS 分為單一階層及多階層的分群, 其階層是診斷分類可依使用需求調整分類標準
 
 單一階層: 較通用的分類
 
 多階層: 將診斷碼分為較精確的分組
 
-目前 ICD-9-PCS 的 CCS 版本為 2015 , ICD-10-PCS 的 CCS 版本為 2018
+目前 ICD-9-PCS 的 CCS 版本為 2015 , ICD-10-PCS 的 CCS 版本為 2019
 
-####單一階層分類 (CCS Category)
-`IcdPrToCCS` 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 分類及分類之敘述
+####1) 單一階層分類
+`IcdPrToCCS` 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 分類(CCS Category)及分類之敘述
 
 ICD-9-PCS 和 ICD-10-PCS 的ccs單一階層一致: 共231種
 ```
@@ -92,8 +99,8 @@ IcdPrToCCS (PrDataFile, ID, ICD, Date, "2016-01-01", TRUE)
 # "Incision and excision of CNS"             "Other CT scan"                
 # "Incision and excision of CNS"             "Incision and excision of CNS"
 ```
-#### 多階層分類 (Multiple ccs level)
-`IcdPrToCCSLvl` 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 多階層分類及分類之敘述
+####2) 多階層分類
+`IcdPrToCCSLvl` 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 多階層分類 (Multiple ccs level)及分類之敘述
 
 ICD-9-PCS 共 3個階層 (Level 1~3)
 
@@ -108,8 +115,8 @@ IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, "2016-01-01", 2, TRUE)
 #  "Incision  excision of CNS"               "Computerized axial tomography (CT) scan"
 #  "Incision  excision of CNS"               "Incision  excision of CNS"    
 ```
-### Procedure Class 
- 由美國醫療照護政策研究品質局（AHRQ）提供的HCUP Classes, 將檢查與處置碼基於其特性分組, 共ICD-PCS code分為下列四個組別:
+###二、Procedure Class 
+由美國醫療照護政策研究品質局（AHRQ）提供的HCUP Classes, 將檢查與處置碼基於其特性分組, 共ICD-PCS code分為下列四個組別:
  
 1.Minor Diagnostic: 非手術室執行之診斷類處置
 
@@ -122,7 +129,7 @@ IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, "2016-01-01", 2, TRUE)
 IcdPrToProcedureClass(PrDataFile, ID, ICD, Date, "2016-01-01", TRUE)
 # "2" "1" "4" "4"
 ```
-# Reference
+## Reference
 
 ### ICD 格式: Short 和 Decimal
 
@@ -140,10 +147,10 @@ https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/
 
 ICD-9-PCS CCS (2015): https://www.hcup-us.ahrq.gov/toolssoftware/procedure/pc2015.csv
 
-ICD-10-PCS CCS (2018): https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp
+ICD-10-PCS CCS (2019): https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp
 
 ### Procedure Class
 
 ICD-9-Procedure Class (2015): https://www.hcup-us.ahrq.gov/toolssoftware/procedure/pc2015.csv
 
-ICD-10-Procedure Class (2018): https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp
+ICD-10-Procedure Class (2019): https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp
